fix(link item): overflow ellipsis width

--- a/src/components/links/LinkItem.module.css
+++ b/src/components/links/LinkItem.module.css
@@ -19,5 +19,5 @@
 .link-item-name {
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 75%;
+  max-width: calc(100% - 3rem);
 }
